# limonitor

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  ENHANCEMENTS.md  OPTIMIZATIONS.md  README.md  README_DEV.md  clean.sh  deploy-pi.sh  requirements-dev.txt
build_test/: version.h
docs/: PROTOCOL_RESEARCH.md
scripts/: pre-commit-build.sh  pre-commit-clang-format.sh
src/: analytics.cpp  analytics.hpp  battery_data.hpp  ble_manager.hpp  ble_manager_linux.cpp  ble_manager_macos.mm  ble_reconnect_logic.hpp  ble_types.hpp  config.hpp  data_store.cpp  data_store.hpp  database.cpp  database.hpp  http_server.cpp  http_server.hpp  jbd_protocol.cpp  jbd_protocol.hpp  litime_protocol.cpp  litime_protocol.hpp  logger.cpp  logger.hpp  main.cpp  ops_events.hpp  ops_util.cpp  ops_util.hpp  pwrgate.cpp  pwrgate.hpp  pwrgate_client.cpp  pwrgate_client.hpp  pwrgate_specs.hpp  serial_reader.cpp  serial_reader.hpp  shelly_client.cpp  shelly_client.hpp  system_events.hpp  system_load.cpp  system_load.hpp  tui.cpp  tui.hpp  tx_events.hpp  (+1 more)
src/analytics/: anomaly_detection.cpp  anomaly_detection.hpp  extensions.cpp  extensions.hpp  health_score.cpp  health_score.hpp  resistance_estimator.cpp  resistance_estimator.hpp  solar_simulation.cpp  solar_simulation.hpp  weather_forecast.cpp  weather_forecast.hpp
src/testing/: runner.cpp  runner.hpp  telemetry.cpp  telemetry.hpp  types.cpp  types.hpp
tests/: integration_test.cpp  test_helpers.hpp  unit_test.cpp
tests/unit/: analytics_test.cpp  ble_test.cpp  database_test.cpp  http_test.cpp  pwrgate_test.cpp  serial_reader_test.cpp  system_load_test.cpp  test_runner_test.cpp  unit_test_main.cpp
